fixed overflow bug

--- a/dark-crows/src/index.css
+++ b/dark-crows/src/index.css
@@ -23,7 +23,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+html { 
+  overflow-x: hidden; 
+}
 
 body {
   margin: 0;
